spec/fixtures/modules/error/plans/err.pp
plan error::err {
  fail_plan(Error('oops', 'test/oops', {'some' => 'info'}, undef))
}
